fix tile/header & add menu calls

--- a/0_dev/removed-files/template_syllabus.html
+++ b/0_dev/removed-files/template_syllabus.html
@@ -67,7 +67,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series"> Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -95,7 +95,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 				</section>
 				
