--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -70,7 +70,7 @@
 					<ol class="menu">
 						<li><a href="#overview">Assessment Overview</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -138,7 +138,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>W.D. & H.O. Wills. <a aria-label="External Link" href="https://digitalcollections.nypl.org/items/510d47da-a883-a3d9-e040-e00a18064a99"><em>Cape Colony</em></a>. [early twentieth century]. The New York Public Library Digital Collections, b15262620. “The copyright and related rights status of this item has been reviewed by The New York Public Library, but we were unable to make a conclusive determination as to the copyright status of the item. You are free to use this Item in any way that is permitted by the copyright and related rights legislation that applies to your use.”</p>
 				</section>
