--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -71,7 +71,7 @@
 						<li><a href="#overview">Assessment Overview</a></li>
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -139,7 +139,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p>(Left) Anonymous. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Amy_Levy_1.jpg">Amy Levy</a>. [nineteenth century]. <em>Wikimedia Commons</em>. Public domain.</p>
 
