--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Deconstructing the Literary Canon Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -120,7 +120,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>jarmoluk. [<a aria-label="External Link" href="https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/">Untitled Photograph</a>]. 15 Oct. 2014. Pixabay. <a aria-label="External Link" href="https://pixabay.com/service/license/">Pixabay License</a>.</p>
 				</section>
