--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -67,7 +67,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Centering Black Studies Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -117,7 +117,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Hawkins, Benjamin Waterhouse. “<a aria-label="External Link" href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
 				</section>
