--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Students in the Archives Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -174,7 +174,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Anonymous. <em><a href="https://commons.wikimedia.org/wiki/File:The_Rani_of_Jhansi_leads_her_troops_in_the_siege_of_Jhansi.jpg.">The Rani of Jhansi Leads Her Troops in the Siege of Jhansi</a></em>. Gouache on paper, [nineteenth century], <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
