--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -67,7 +67,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Centering Black Studies Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -119,7 +119,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Kaufmann, Theodor. “<a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/11287">On to Liberty</a>.” 1867. The Met, 1982.443.3. Public domain. Gift of Erving and Joyce Wolf, in memory of Diane R. Wolf, 1982.</p>
 				</section>
