--- a/html/syllabi/capital-l_literature.html
+++ b/html/syllabi/capital-l_literature.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Deconstructing the Literary Canon Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -140,7 +140,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p>(Left) Blake, William. “<a aria-label="External Link" href="http://www.blakearchive.org/copy/urizen.g?descId=urizen.g.illbk.01">The First Book of Urizen</a>.” 1794 (composed); c.1818 (printed). <em>The William Blake Archive</em>, <em>The Book of Urizen</em>, Copy G, Object 1 (Bentley 1, Erdman 1, Keynes 1). Fair use.</p>
 						
