--- a/html/syllabi/hinduism_imperial.html
+++ b/html/syllabi/hinduism_imperial.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">The Nineteenth-Century Religious Other Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -130,7 +130,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p><p>Bartholomew, John George. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Brit_IndianEmpireReligions3.jpg"><em>Prevaling Religions: British Empire</em></a>. 1909. <em>Wikimedia Commons</em>. Public domain.</p></p>						
 				</section>
