--- a/html/syllabi/jewish_british.html
+++ b/html/syllabi/jewish_british.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">The Nineteenth-Century Religious Other Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -136,7 +136,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p><p>Carpenter, Shawn. “<a aria-label="External Link" href="https://www.flickr.com/photos/spcbrass/4744175365/in/photostream/">Candle</a>.” 28 June 2010. <em>Flickr</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)</a></p></p>
 				</section>
