--- a/html/syllabi/multiethnic_literature.html
+++ b/html/syllabi/multiethnic_literature.html
@@ -78,7 +78,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Beyond “Victorian” Literature Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -202,7 +202,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Meseguer, Enrique. <a aria-label="External Link" href="https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/"><em>Steampunk City</em></a>. 11 Dec. 2017, pixabay. Free to use under the <a aria-label="External Link" href="https://pixabay.com/service/terms/">Content License</a>. No attribution required.</p>
 				</section>
