--- a/html/syllabi/muslim_other.html
+++ b/html/syllabi/muslim_other.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">The Nineteenth-Century Religious Other Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -140,10 +140,11 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p><p>(Left) Boudewijn Huysmans. [<a aria-label="External Link" href="https://unsplash.com/photos/J82Go1HjKPQ">Hand-Painted Illustration</a>]. 18 Oct. 2020. <em>Unsplash</em>. <a aria-label="External Link" href="https://unsplash.com/license">Unsplash License</a>. <em>Full Title: Hand-painted illustration from probably a book about Islam. Most likely well over 100 years old.</em></p>
-<p>(Right) cottonbro studio. <em><a aria-label="External Link" href="https://www.pexels.com/photo/woman-in-red-hijab-and-black-robe-4646231/">Woman in Red Hijab and Black Robe</a></em>. 28 May 2020. <em>Pexels</em>. <a aria-label="External Link" href="https://www.pexels.com/license/">Pexels License</a>.</p></p>
+
+					<p>(Right) cottonbro studio. <em><a aria-label="External Link" href="https://www.pexels.com/photo/woman-in-red-hijab-and-black-robe-4646231/">Woman in Red Hijab and Black Robe</a></em>. 28 May 2020. <em>Pexels</em>. <a aria-label="External Link" href="https://www.pexels.com/license/">Pexels License</a>.</p></p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
