--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Centering Black Studies Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -126,7 +126,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p>(Left) Ramsay, Allan. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Portrait_of_an_African.jpg">Portrait of an African</a>” [Ignatius Sancho Aka Olaudah Equiano]. <em>Wikimedia Common</em>, 1757. Royal Albert Memorial Museum, 14/1943. Public domain.</p>
 						
