--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Recontextualizing the Victorians Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -126,7 +126,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Sims, G. R., editor. “<a aria-label="External Link" href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12. Public domain.</p>
 				</section>
