--- a/html/syllabi/representative_survey.html
+++ b/html/syllabi/representative_survey.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Beyond “Victorian” Literature Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -142,7 +142,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 					<p>Dingley, Andy. <a aria-label="External Link" href="https://en.wikipedia.org/wiki/File:Battersea_Power_Station,_1934_with_only_two_chimneys_(Our_Generation,_1938).jpg"><em>Battersea Power Station, 1934 with Only Two Chimneys (Our Generation, 1938)</em>.</a> 1934, <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 				
