--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -67,7 +67,7 @@
 							<li><a href="#works-cited">Works Cited</a></li>
 							<li><a href="#series">Recontextualizing the Victorians Series</a></li>
 							<li><a href="#biography">Developer Biography</a></li>
-							<li><a href="#caption">Header Image Caption</a></li>
+							<li><a href="#caption">Tile/Header Image Caption</a></li>
               <li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
             </ol>
           </section>
@@ -127,7 +127,7 @@
 					</section>
 
 					<section class="small" aria-labelledby="caption">
-						<h3 id="caption">Header Image Caption</h3>
+						<h3 id="caption">Tile/Header Image Caption</h3>
 
 						<p><a aria-label="External Link" href="https://digital.lib.sfu.ca/pfp-22097/msc130-1106701"><em>The Lions and Brockton Point, Stanley Park</em></a>. n.d. Simon Frazer University Digitized Collections, MSC130-11067.</p>
 					</section>
