--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Deconstructing the Literary Canon Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -122,7 +122,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					<p>Ghosh, Gourav. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
 				</section>
