--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Gender and Empire Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -124,7 +124,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p>(Left) Lewis, Edmonia. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s Marriage</a>.” 1871. <em>Wikimedia Commons</em>. Public domain.</p>
 					
