--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -66,7 +66,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Gender and Empire Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Captions</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -126,7 +126,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Captions</h3>
 
 					<p>(Left) “<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
 					
