--- a/py/template-assessment-1.html
+++ b/py/template-assessment-1.html
@@ -72,7 +72,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">{cluster-title} Series</a></li><!-- Change -->
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -104,7 +104,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					{header-image-caption}
 				</section>
