--- a/py/template-syllabus-1.html
+++ b/py/template-syllabus-1.html
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">{cluster-title} Series</a></li><!-- Change -->
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -102,7 +102,7 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					{header-image-caption}
 				</section>
