--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -43,6 +43,16 @@
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
+				<section class="menu-container" aria-labelledby="menu">
+					<h3 id="menu">Menu</h3>
+					<ol class="menu">
+						<li><a href="#overview">Overview</a></li>
+						<li><a href="#contribs">Contributors</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
+						<li><a href="#citation">Page Citation (MLA)</a></li>
+					</ol>
+				</section>
+
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
 					<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding developers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
