--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -49,7 +49,7 @@
 						<li><a href="#overview">Overview</a></li>
 						<li><a href="#solicitation">Full Solicitation</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
-						<li><a href="#citation">Page (MLA)</a></li>
+						<li><a href="#citation">Page Citation (MLA)</a></li>
 					</ol>
 				</section>
 
