--- a/html/about/call_for_assistant_editors_2022.html
+++ b/html/about/call_for_assistant_editors_2022.html
@@ -48,7 +48,7 @@
 					<ol class="menu">
 						<li><a href="#solicitation">Full Solicitation</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
-						<li><a href="#citation">Page (MLA)</a></li>
+						<li><a href="#citation">Page Citation (MLA)</a></li>
 					</ol>
 				</section>
 
