--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -44,6 +44,16 @@
           <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
         </div>
 
+        <section class="menu-container" aria-labelledby="menu">
+					<h3 id="menu">Menu</h3>
+					<ol class="menu">
+						<li><a href="#details">Production Details</a></li>
+						<li><a href="#timeline">Overview and Timeline</a></li>
+						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#citation">Page Citation (MLA)</a></li>
+					</ol>
+				</section>
+
         <section class="cluster-details specs" aria-labelledby="details">
           <h3 id="details">Production Details</h3>
 
@@ -59,7 +69,7 @@
         </section>
 
         <section aria-labelledby="timeline">
-          <h3 id="timeline">Timeline</h3>
+          <h3 id="timeline">Overview and Timeline</h3>
 
           <p>To help instructors and students who may be unfamiliar with the history of East Asia and its transimperial exchanges with the Anglophone world, the creators of the “<a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>” lesson plan cluster built this timeline, which includes some major historical events from the fifteenth to the twentieth century. This timeline comes out of our many discussions about the methodological issues that arise when the field of Victorian Studies seeks to expand its traditional geographical scope. As we quickly realized in the process of creating our cluster, the usual boundaries of the long nineteenth century (the French Revolution to World War I) are too limited and Eurocentric for the transimperial connections our lesson plans examine. Thus, we offer this timeline both to orient instructors and students and to illustrate how centering East Asia calls into question our field’s most basic assumptions. For more historical context and resources, please peruse each <a href="/html/lesson_plans/east_asia_transimperial_introduction.html#lps">lesson plan</a>.</p>
 
