--- a/py/exploring_archives.html
+++ b/py/exploring_archives.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessment">
 				<h2 id="assessment">Exploring the Archives</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/assessments/uvc_-1800px.jpg" srcset="/img/assessments/uvc_-1800px.jpg 1800w, /img/assessments/uvc_-1650px.jpg 1650w, /img/assessments/uvc_-1500px.jpg 1500w, /img/assessments/uvc_-1350px.jpg 1350w, /img/assessments/uvc_-1200px.jpg 1200w, /img/assessments/uvc_-1050px.jpg 1050w, /img/assessments/uvc_-900px.jpg 900w, /img/assessments/uvc_-750px.jpg 750w, /img/assessments/uvc_-600px.jpg 600w, /img/assessments/uvc_-450px.jpg 450w, /img/assessments/uvc_-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+          	<img src="/img/assessments/uvc_0070-1800px.jpg" srcset="/img/assessments/uvc_0070-1800px.jpg 1800w, /img/assessments/uvc_0070-1650px.jpg 1650w, /img/assessments/uvc_0070-1500px.jpg 1500w, /img/assessments/uvc_0070-1350px.jpg 1350w, /img/assessments/uvc_0070-1200px.jpg 1200w, /img/assessments/uvc_0070-1050px.jpg 1050w, /img/assessments/uvc_0070-900px.jpg 900w, /img/assessments/uvc_0070-750px.jpg 750w, /img/assessments/uvc_0070-600px.jpg 600w, /img/assessments/uvc_0070-450px.jpg 450w, /img/assessments/uvc_0070-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -70,7 +70,7 @@
 						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#series">Students in the Archives Series</a></li><!-- Change -->
 						<li><a href="#biography">Developer Biography</a></li>
-						<li><a href="#caption">Header Image Caption</a></li>
+						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -84,7 +84,7 @@
 
 					<p>The Capstone Seminar at Guttman brings together the academic experience of the Liberal Arts and Sciences major through interdisciplinary coursework to explore contemporary issues related to modern society. My seminar, “Nineteenth Century Media and Identity,” is an interdisciplinary course that explores how Victorian ideology was produced, circulated, and consumed across different media. I take a comparative approach so that students can identify how issues raised in the nineteenth century are reflected in media today. For example, we look at imperialism in Rudyard Kipling’s poem “The White Man’s Burden” in conjunction with racist advertisements for Pears’ Soap in both Britain and America and then consider how modern advertising is similarly implicated in imperialism. In another module, we read newspaper accounts of the Jack the Ripper murders and compare them with victim blaming in mainstream media today.</p>
 
-					<p>Comparing nineteenth-century and contemporary constructions of identity across different media engages student interest in an unfamiliar period and helps students to understand difficult concepts by first accessing their prior knowledge on similar subjects. Providing students with a variety of texts to choose from, both visual and verbal, and with various levels of difficulty, also gives neurodivergent students more autonomy in deciding the best way to engage with course content and show their learning. Additionally, I ask students to write metacognitive reflections throughout the semester in which they consider how knowledge is constructed and reconstructed in the field of Victorian Studies. After discussing “cartomania” and different examples of <em>cartes de visite</em>, we discuss the mission of the <a aria-label="External Link" href="http://themissingchapter.co.uk/black-chronicles-ii/"> <u><em>Black Chronicles II</em> project</u></a> to locate and exhibit forgotten and erased portraits of Black Victorians. It is within this context that I introduce our “Exploring the Archives” assignment.</p>
+					<p>Comparing nineteenth-century and contemporary constructions of identity across different media engages student interest in an unfamiliar period and helps students to understand difficult concepts by first accessing their prior knowledge on similar subjects. Providing students with a variety of texts to choose from, both visual and verbal, and with various levels of difficulty, also gives neurodivergent students more autonomy in deciding the best way to engage with course content and show their learning. Additionally, I ask students to write metacognitive reflections throughout the semester in which they consider how knowledge is constructed and reconstructed in the field of Victorian Studies. After discussing “cartomania” and different examples of <em>cartes de visite</em>, we discuss the mission of the <a aria-label="External Link" href="http://themissingchapter.co.uk/black-chronicles-ii/"> <u><em>Black Chronicles II</em></u></a> project to locate and exhibit forgotten and erased portraits of Black Victorians. It is within this context that I introduce our “Exploring the Archives” assignment.</p>
 
 					<p>To understand why we are doing archival research, we read excerpts of Rebecca Hall’s graphic novel <em>Wake: The Hidden History of Women-Led Slave Revolts</em>, and discuss the kinds of representation missing from the archives that led her to imaginatively recreate history in the form of a graphic novel. When I teach this course again in the future, I plan to deepen this critical framework by assigning Saidiya Hartman’s introduction to <em>Wayward Lives, Beautiful Experiments</em> and discussing her warning that “Every historian of the multitude, the dispossessed, the subaltern, and the enslaved is forced to grapple with the power and authority of the archive and the limits it sets on what can be known, whose perspective matters, and who is endowed with the gravity and authority of historical actor” (Hartman xiii). This framing will, I think, help students see themselves as “historian[s] of the multitude” via their archival work, for this assignment asks students to find and analyze a primary source that reveals something about people who have been left out of history (as we saw in the <em>Black Chronicles II</em> exhibition) or a primary source that encodes a position of power and/or places limits on what can be known (as we saw in colonial advertising).</p>
 
@@ -102,7 +102,7 @@
 
 					<p>Through this assignment, students develop skills that are critical to digital-age composition and literacy, but most importantly they are better able to identify and interrogate structures of power. For example, one student who analyzed a colonial newspaper in East Africa observed the abundance of references to Christmas, including places where colonial families could secure food and presents for the holiday. In his analysis, he identified how Christmas was used to reinforce imperial ties between Britain and the colonies as well as to enforce Western values and traditions on indigenous peoples.</p>
 
-					<p>Based on the work students submitted, it is clear that the assignment successfully enacts the four-layered equity framework proposed by Gholdy Muhammed in <em>Cultivating Genius: An Equity Framework for Culturally and Historically Responsive Literacy:</em> 1: Identity development, 2: Skill development, 3: Intellectual development, and 4: Criticality. Furthermore, my community college students were empowered by becoming co-producers of knowledge. bell hooks notes in <em>Teaching to Transgress: Education as the Practice of Freedom</em> that “students in public institutions, mostly from working-class backgrounds, come to college assuming that professors see them as having nothing of value to say, no valuable contribution to make to a dialectical exchange of ideas” (149). This assignment encourages students to see themselves as researchers with a voice, and when we discuss everyone’s findings as a class, I emphasize that each student has offered a new critical insight into Victorian media and culture.</p>
+					<p>Based on the work students submitted, it is clear that the assignment successfully enacts the four-layered equity framework proposed by Gholdy Muhammed in <em>Cultivating Genius: An Equity Framework for Culturally and Historically Responsive Literacy:</em> 1) Identity development, 2) Skill development, 3) Intellectual development, and 4) Criticality. Furthermore, my community college students were empowered by becoming co-producers of knowledge. bell hooks notes in <em>Teaching to Transgress: Education as the Practice of Freedom</em> that “students in public institutions, mostly from working-class backgrounds, come to college assuming that professors see them as having nothing of value to say, no valuable contribution to make to a dialectical exchange of ideas” (149). This assignment encourages students to see themselves as researchers with a voice, and when we discuss everyone’s findings as a class, I emphasize that each student has offered a new critical insight into Victorian media and culture.</p>
 
 					<p>There are several ways that I plan to improve this assignment. The first thing that I have realized is that in asking students to write their analysis in a traditional essay format, this assessment does not offer multiple means of expression, which is important to accessible assessment design. In future iterations, I could ask students to present their archival resources to public-facing audiences using different genres and media such as podcasts, videos, blogs, websites, etc. Alternatively, to create a culture of collaborative inquiry, the class could curate a digital exhibition of the sources found, with each student writing a catalog description for their source. As a group, we could discuss our findings and collectively write a rationale for the exhibition in the context of our class themes. Students could create digital exhibitions on CUNY’s Academic Commons and gain experience using WordPress. Students could make their sites available to the public so that they have the experience of writing for authentic readers.</p>
 
@@ -115,11 +115,17 @@
 					<h3 id="works-cited">Works Cited</h3>
 
 					<p>Buurma, Rachel Sagner, and Laura Heffernan. <em>The Teaching Archive: A New History of Literary Study</em>. University of Chicago Press, 2021.</p>
+
 					<p>Hartman, Saidiya. &ldquo;Venus in Two Acts.&rdquo; <em>Small Axe</em>, vol. 12, no. 2, 2008, pp. 1&ndash;14.</p>
+
 					<p>---. <em>Wayward Lives, Beautiful Experiments: Intimate Histories of Riotous Black Girls, Troublesome Women, and Queer Radicals.</em> W. W Norton &amp; Company, 2019.</p>
+
 					<p>hooks, bell. <em>Teaching to Transgress: Education as the Practice of Freedom</em>. Routledge, 1994.</p>
+
 					<p>Inoue, Asao B. <em>Labor-Based Grading Contracts: Building Equity and Inclusion in the Compassionate Writing Classroom</em>. University Press of Colorado, 2019.</p>
+
 					<p>Kryger, Kathleen, and Griffin X. Zimmerman. &ldquo;<a aria-label="External Link" href="https://escholarship.org/uc/item/0934x4rm.">Neurodivergence and Intersectionality in Labor-Based Grading Contracts</a>.&rdquo; <em>Journal of Writing Assessment</em>, vol. 13, no. 2</p>
+
 					<p>Muhammad, Gholdy. <em>Cultivating Genius: An Equity Framework for Culturally and Historically Responsive Literacy</em>.</p>
 				</section>
 
@@ -136,14 +142,14 @@
 				</section>
 
 				<section class="small" aria-labelledby="caption">
-					<h3 id="caption">Header Image Caption</h3>
+					<h3 id="caption">Tile/Header Image Caption</h3>
 
 					
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Laura Clarke, dev. “Exploring the Archives.” Vani Kannan , peer rev.; , assessment cluster dev.;  Sophia Hsu, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/exploring_archives.html" class="cite-link">https://undiscipliningvc.org/html/assessments/exploring_archives.html</a>.</p><!-- Change -->
+					<p>Laura Clarke, dev. “Exploring the Archives.” Vani Kannan, peer rev.;Sophia Hsu, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/exploring_archives.html" class="cite-link">https://undiscipliningvc.org/html/assessments/exploring_archives.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
