u sitemap and assessments.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -150,7 +150,10 @@
 								<li><a href="/html/assessments/call_for_assessments.html">Call for Assessments (2023)</a></li>
 								<li>Students in the Archives
 									<ol>
-										<li><a href="/html/assessments/archives-of-empire.html">Archives of Empire</a></li>
+										<li><a href="/html/assessments/exploring_archives.html">Exploring the Archives</a></li>
+									</ol>
+									<ol>
+										<li><a href="/html/assessments/archives_of_empire.html">Archives of Empire</a></li>
 									</ol>
 								</li>
 								<li>Widening the Empire
