--- a/py/exploring_archives.html
+++ b/py/exploring_archives.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessment">
 				<h2 id="assessment">Exploring the Archives</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/assessments/uvc_0070-1800px.jpg" srcset="/img/assessments/uvc_0070-1800px.jpg 1800w, /img/assessments/uvc_0070-1650px.jpg 1650w, /img/assessments/uvc_0070-1500px.jpg 1500w, /img/assessments/uvc_0070-1350px.jpg 1350w, /img/assessments/uvc_0070-1200px.jpg 1200w, /img/assessments/uvc_0070-1050px.jpg 1050w, /img/assessments/uvc_0070-900px.jpg 900w, /img/assessments/uvc_0070-750px.jpg 750w, /img/assessments/uvc_0070-600px.jpg 600w, /img/assessments/uvc_0070-450px.jpg 450w, /img/assessments/uvc_0070-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+          	<img src="/img/assessments/uvc_0070-1800px.jpg" srcset="/img/assessments/uvc_0070-1800px.jpg 1800w, /img/assessments/uvc_0070-1650px.jpg 1650w, /img/assessments/uvc_0070-1500px.jpg 1500w, /img/assessments/uvc_0070-1350px.jpg 1350w, /img/assessments/uvc_0070-1200px.jpg 1200w, /img/assessments/uvc_0070-1050px.jpg 1050w, /img/assessments/uvc_0070-900px.jpg 900w, /img/assessments/uvc_0070-750px.jpg 750w, /img/assessments/uvc_0070-600px.jpg 600w, /img/assessments/uvc_0070-450px.jpg 450w, /img/assessments/uvc_0070-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="archive illustration captioned Colored School-- Object teaching"/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
