--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -69,6 +69,7 @@
 						<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 						<li><strong>Lindsey N. Chappell</strong> (Georgia Southern University)</li>
 						<li><strong>Sanjana Chowdhury</strong> (Texas Christian University)</li>
+						<li><strong>Laura Clarke</strong> (University of Sussex)</li>
 						<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 						<li><strong>Kimberly Cox</strong> (Chadron State College)</li>
 						<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
