--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -55,7 +55,7 @@
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
-						<p><strong>Associated Assessment:</strong> Laura Clarke, “<a href="/html/assessments/.html">Developing Criticality through Archival Research</a>”</p>
+						<p><strong>Associated Assessment:</strong> Laura Clarke, “<a href="/html/assessments/exploring_archives.html">Exploring the Archives</a>”</p>
 
 						<p><strong>Cluster Title:</strong> Students in the Archives</p>
 
