--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessment">
 				<h2 id="assessment">Undisciplining Archives of Empire</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/assessments/uvc_0069-1800px.jpg" srcset="/img/assessments/uvc_0069-1800px.jpg 1800w, /img/assessments/uvc_0069-1650px.jpg 1650w, /img/assessments/uvc_0069-1500px.jpg 1500w, /img/assessments/uvc_0069-1350px.jpg 1350w, /img/assessments/uvc_0069-1200px.jpg 1200w, /img/assessments/uvc_0069-1050px.jpg 1050w, /img/assessments/uvc_0069-900px.jpg 900w, /img/assessments/uvc_0069-750px.jpg 750w, /img/assessments/uvc_0069-600px.jpg 600w, /img/assessments/uvc_0069-450px.jpg 450w, /img/assessments/uvc_0069-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A colorful oil painting of The Rani of Jhansi leadings her troops on horseback"/>
+          	<img src="/img/assessments/uvc_0069-1800px.jpg" srcset="/img/assessments/uvc_0069-1800px.jpg 1800w, /img/assessments/uvc_0069-1650px.jpg 1650w, /img/assessments/uvc_0069-1500px.jpg 1500w, /img/assessments/uvc_0069-1350px.jpg 1350w, /img/assessments/uvc_0069-1200px.jpg 1200w, /img/assessments/uvc_0069-1050px.jpg 1050w, /img/assessments/uvc_0069-900px.jpg 900w, /img/assessments/uvc_0069-750px.jpg 750w, /img/assessments/uvc_0069-600px.jpg 600w, /img/assessments/uvc_0069-450px.jpg 450w, /img/assessments/uvc_0069-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A colorful oil painting of the Rani of Jhansi leadings her troops on horseback."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
