--- a/py/template-lesson-plan-1.html
+++ b/py/template-lesson-plan-1.html
@@ -23,7 +23,7 @@
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 
 	<body class="essay">
-		<div class="text-container content assessments">
+		<div class="text-container content lesson-plans">
 
 			<div data-include="nav">
 				<nav id="fallback-nav">
@@ -36,15 +36,15 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="assessment">
-				<h2 id="assessment">{title}</h2><!-- Change -->
+			<main id="main" aria-labelledby="lesson-plan">
+				<h2 id="lesson-plan">{title}</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/assessments/uvc_{image-no}-1800px.jpg" srcset="/img/assessments/uvc_{image-no}-1800px.jpg 1800w, /img/assessments/uvc_{image-no}-1650px.jpg 1650w, /img/assessments/uvc_{image-no}-1500px.jpg 1500w, /img/assessments/uvc_{image-no}-1350px.jpg 1350w, /img/assessments/uvc_{image-no}-1200px.jpg 1200w, /img/assessments/uvc_{image-no}-1050px.jpg 1050w, /img/assessments/uvc_{image-no}-900px.jpg 900w, /img/assessments/uvc_{image-no}-750px.jpg 750w, /img/assessments/uvc_{image-no}-600px.jpg 600w, /img/assessments/uvc_{image-no}-450px.jpg 450w, /img/assessments/uvc_{image-no}-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="{alt}"/><!-- Change -->
+          	<img src="/img/lesson_plans/uvc_{image-no}-1800px.jpg" srcset="/img/lesson_plans/uvc_{image-no}-1800px.jpg 1800w, /img/lesson_plans/uvc_{image-no}-1650px.jpg 1650w, /img/lesson_plans/uvc_{image-no}-1500px.jpg 1500w, /img/lesson_plans/uvc_{image-no}-1350px.jpg 1350w, /img/lesson_plans/uvc_{image-no}-1200px.jpg 1200w, /img/lesson_plans/uvc_{image-no}-1050px.jpg 1050w, /img/lesson_plans/uvc_{image-no}-900px.jpg 900w, /img/lesson_plans/uvc_{image-no}-750px.jpg 750w, /img/lesson_plans/uvc_{image-no}-600px.jpg 600w, /img/lesson_plans/uvc_{image-no}-450px.jpg 450w, /img/lesson_plans/uvc_{image-no}-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="{alt}"/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
-				<section class="specs" aria-labelledby="assessment-specs">
-					<h3 id="assessment-specs">Assessment Production Details</h3>
+				<section class="specs" aria-labelledby="lesson-plan-specs">
+					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
 						<p><strong>Developer:</strong> {developer} <a class="mail" href="mailto:{dev-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
@@ -70,14 +70,14 @@
 						<li><a href="#structure">Structure and Organisation</a></li>
 						<li><a href="#materials">Suggested Materials</a>
 							<ol>
-								<li><a href="materials-1"></a></li>
-								<li><a href="materials-2"></a></li>
-								<li><a href="materials-3"></a></li>
+								<li><a href="materials-1">[Change to first title]</a></li>
+								<li><a href="materials-2">[Change to second title]</a></li>
+								<li><a href="materials-3">[Change to third title]</a></li>
 							</ol>
 						</li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
-						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
+						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
 					</ol>
 				</section>
 
@@ -102,7 +102,7 @@
 					<h3 id="materials">Suggested Materials</h3>
 
 					<section aria-labelledby="materials-1">
-						<h4 id="materials-1"><!-- first subtitle --></h4>
+						<h4 id="materials-1">[Change to first title]</h4>
 
 						<section aria-labelledby="primary-1">
 							<h5 id="primary-1">Primary Sources</h5>
@@ -131,7 +131,7 @@
 						</section>
 
 						<section aria-labelledby="materials-2">
-							<h4 id="materials-2"><!-- second subtitle --></h4>
+							<h4 id="materials-2">[Change to second title]</h4>
 	
 							<section aria-labelledby="primary-2">
 								<h5 id="primary-2">Primary Sources</h5>
@@ -161,7 +161,7 @@
 					</section>
 
 					<section aria-labelledby="materials-3">
-						<h4 id="materials-3"><!-- third subtitle --></h4>
+						<h4 id="materials-3">[Change to third title]</h4>
 
 						<section aria-labelledby="primary-3">
 							<h5 id="primary-3">Primary Sources</h5>
@@ -203,8 +203,8 @@
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
-					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>{developer}, dev. “{title}.” {collab-peer-reviewers}, collab peer revs.; {lesson-plan-cluster-dev}, lesson plan cluster dev.;  {lesson-plan-guide}, lesson plan guide. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/assessments/{lesson-plan-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/assessments/{lesson-plan-webpage-name}.html</a>.</p><!-- Change -->
+					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+					<p>{developer}, dev. “{title}.” {collab-peer-reviewers}, collab peer revs.; {lesson-plan-cluster-dev}, lesson plan cluster dev.;  {lesson-plan-guide}, lesson plan guide. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/lesson_plans/{lesson-plan-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/{lesson-plan-webpage-name}.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
