--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Vani Kannan</p>
 
-						<p><strong>assess. guide:</strong> Anne Schwan <a class="mail" href="mailto:A.Schwan@napier.ac.uk?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Assessment Guide:</strong> Anne Schwan <a class="mail" href="mailto:A.Schwan@napier.ac.uk?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
