--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Sarah Ohmer</p>
 
-						<p><strong>assess. guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Assessment Guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Copyeditor:</strong> H Fogarty</p>
 
