--- a/html/assessments/exploring_archives.html
+++ b/html/assessments/exploring_archives.html
@@ -151,7 +151,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Laura Clarke, dev. “Exploring the Archives.” Vani Kannan, peer rev.; Sophia Hsu, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/exploring_archives.html" class="cite-link">https://undiscipliningvc.org/html/assessments/exploring_archives.html</a>.</p>
+					<p>Laura Clarke, dev. “Exploring the Archives.” Vani Kannan, peer rev.; Sophia Hsu, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/exploring_archives.html" class="cite-link">https://undiscipliningvc.org/html/assessments/exploring_archives.html</a>.</p>
 				</section>
 			</main>
 			
