--- a/py/template-assessment-1.html
+++ b/py/template-assessment-1.html
@@ -54,6 +54,8 @@
 						<p><strong>Assessment Cluster Developer:</strong> {assessment-cluster-dev} <a class="mail" href="mailto:{cluster-dev-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Assessment Guide:</strong> {assessment-guide} <a class="mail" href="mailto:{assessment-guide-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
+
+						<p><strong>Copyeditor:</strong> {copyeditor}</p><!-- Change -->
 						
 						<p><strong>Webpage Developer:</strong> {webpage-dev}</p><!-- Change -->
 
