--- a/py/template-lesson-plan-1.html
+++ b/py/template-lesson-plan-1.html
@@ -54,6 +54,8 @@
 						<p><strong>Lesson Plan Cluster Developer:</strong> {lesson-plan-cluster-dev} <a class="mail" href="mailto:{cluster-dev-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Lesson Plan Guide:</strong> {lesson-plan-guide} <a class="mail" href="mailto:{lesson-plan-guide-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
+
+						<p><strong>Copyeditor:</strong> {copyeditor}</p><!-- Change -->
 						
 						<p><strong>Webpage Developer:</strong> {webpage-dev}</p><!-- Change -->
 
