--- a/py/template-syllabus-1.html
+++ b/py/template-syllabus-1.html
@@ -55,6 +55,8 @@
 
 						<p><strong>Syllabus Guide:</strong> {syllabus-guide} <a class="mail" href="mailto:{syllabus-guide-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 						
+						<p><strong>Copyeditor:</strong> {copyeditor}</p><!-- Change -->
+
 						<p><strong>Webpage Developer:</strong> {webpage-dev}</p><!-- Change -->							
 
 						<p><strong>Cluster Title:</strong> {cluster-title}</p><!-- Change -->
