--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -376,7 +376,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Jessica R. Valdez, lesson plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Hyungji Park, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_chinese_migration.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_chinese_migration.html</a>.</p>
+					<p>Jessica R. Valdez, les. plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Hyungji Park, Rae X. Yan, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_chinese_migration.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_chinese_migration.html</a>.</p>
 				</section>
 			</main>
 			
