--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -127,7 +127,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Jacob Romanow, dev. “Canon Fodder: What Should We Read?” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/canon_fodder.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/canon_fodder.html</a>.</p>
+					<p>Jacob Romanow, dev. “Canon Fodder: What Should We Read?” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/canon_fodder.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/canon_fodder.html</a>.</p>
 				</section>
 			</main>
 			
