--- a/html/syllabi/multiethnic_literature.html
+++ b/html/syllabi/multiethnic_literature.html
@@ -209,7 +209,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Kimberly Cox, dev. “Multiethnic Literature: Global Neo-Victorians.” Jacob Romanow, peer rev.; Kimberly Cox and Riya Das, syllabus cluster devs.; Pearl Chaozon Bauer and Adrian S. Wisnicki, syllabus guides. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/multiethnic_literature.html" class="cite-link" >https://undiscipliningvc.org/html/syllabi/multiethnic_literature.html</a>.</p>
+					<p>Kimberly Cox, dev. “Multiethnic Literature: Global Neo-Victorians.” Jacob Romanow, peer rev.; Kimberly Cox and Riya Das, syl. clust. devs.; Pearl Chaozon Bauer and Adrian S. Wisnicki, syl. guides. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/multiethnic_literature.html" class="cite-link" >https://undiscipliningvc.org/html/syllabi/multiethnic_literature.html</a>.</p>
 				</section>
 			</main>
 			
