--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -129,7 +129,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Shantanu Majee, dev. “UVC in India: Case Study of JUDE.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/uvc_india_jude.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/uvc_india_jude.html</a>.</p>
+					<p>Shantanu Majee, dev. “UVC in India: Case Study of JUDE.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/uvc_india_jude.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/uvc_india_jude.html</a>.</p>
 				</section>
 			</main>
 			
