--- a/html/zoomcasts/gao-loh-park-valdez-yan.html
+++ b/html/zoomcasts/gao-loh-park-valdez-yan.html
@@ -101,7 +101,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Menglu Gao, Waiyee Loh, Hyungji Park, Jessica Valdez, and Rae Yan.” Hosted by Sophia Hsu. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/zoomcasts/gao-loh-park-valdez-yan.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/gao-loh-park-valdez-yan.html</a>.</p>
+						<p>“Zoomcast with Menglu Gao, Waiyee Loh, Hyungji Park, Jessica Valdez, and Rae Yan.” Sophia Hsu, host; M.A. Miller, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/zoomcasts/gao-loh-park-valdez-yan.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/gao-loh-park-valdez-yan.html</a>.</p>
 					</section>
 			</main>
 			
