--- a/0_dev/removed-files/template_syllabus.html
+++ b/0_dev/removed-files/template_syllabus.html
@@ -101,7 +101,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>, dev. “.” , peer rev.; , syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/.html</a>.</p><!-- Change -->
+					<p>, dev. “.” , peer rev.; , syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
