--- a/0_dev/templates+workflows/template_lesson-plan-caribbean.html
+++ b/0_dev/templates+workflows/template_lesson-plan-caribbean.html
@@ -174,7 +174,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>, lesson plan dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
+					<p>, les. plan dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
