--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -148,7 +148,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assessments/recovering_reevaluating.html</a>.</p>
+					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assess. guide.; ; H Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assessments/recovering_reevaluating.html</a>.</p>
 				</section>
 			</main>
 			
