--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -321,7 +321,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Cherrie Kwok, lesson plan dev. “Undisciplining the Dramatic Monologue.” Carolyn Betensky, Melissa Free, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_dramatic_monologue.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_dramatic_monologue.html</a>.</p>
+					<p>Cherrie Kwok, les. plan dev. “Undisciplining the Dramatic Monologue.” Carolyn Betensky, Melissa Free, Ji Eun Lee, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_dramatic_monologue.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_dramatic_monologue.html</a>.</p>
 				</section>
 			</main>
 			
