--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -146,7 +146,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_ethiopianism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_ethiopianism.html</a>.</p>
+					<p>Melissa Free, les. plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_ethiopianism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_ethiopianism.html</a>.</p>
 				</section>
 			</main>
 			
