--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -160,7 +160,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Carolyn Betensky, lesson plan dev. “Slavery and Theories of Sexuality, Desire, and the Family.” Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_slavery_theories.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html</a>.</p>
+					<p>Carolyn Betensky, les. plan dev. “Slavery and Theories of Sexuality, Desire, and the Family.” Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_slavery_theories.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html</a>.</p>
 				</section>
 			</main>
 			
