--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -231,7 +231,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Breanna Simpson, lesson plan dev. “Decolonizing Health(care).” Kira Braham, Heidi Kaufman, Indu Ohri, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_decolonizing_heathcare.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html</a>.</p>
+					<p>Breanna Simpson, les. plan dev. “Decolonizing Health(care).” Kira Braham, Heidi Kaufman, Indu Ohri, collab. peer revs.; Adrian S. Wisnicki, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_decolonizing_heathcare.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html</a>.</p>
 				</section>
 			</main>
 			
