--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -246,7 +246,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Heidi Kaufman, lesson plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_undisciplining_autobiography.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_undisciplining_autobiography.html</a>.</p>
+						<p>Heidi Kaufman, les. plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_undisciplining_autobiography.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_undisciplining_autobiography.html</a>.</p>
 					</section>
 			</main>
 			
