--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -126,7 +126,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Meg Dobbins, dev. “Black (Im)mobilities.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/black_(im)mobilities.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/black_(im)mobilities.html</a>.</p>
+					<p>Meg Dobbins, dev. “Black (Im)mobilities.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/black_(im)mobilities.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/black_(im)mobilities.html</a>.</p>
 				</section>
 			</main>
 			
