--- a/html/syllabi/hinduism_imperial.html
+++ b/html/syllabi/hinduism_imperial.html
@@ -137,7 +137,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Sanjana Chowdhury, dev. “Hinduism and Imperial Interventions in Victorian Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/hinduism_imperial.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/hinduism_imperial.html</a>.</p>
+					<p>Sanjana Chowdhury, dev. “Hinduism and Imperial Interventions in Victorian Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syl. clust. dev.; Sophia Hsu, syl. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/hinduism_imperial.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/hinduism_imperial.html</a>.</p>
 				</section>
 			</main>
 			
