--- a/html/syllabi/jewish_british.html
+++ b/html/syllabi/jewish_british.html
@@ -143,7 +143,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Alyssa Quinn Johnson, dev. “Nineteenth-Century Jewish British Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/jewish_british.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/jewish_british.html</a>.</p>
+					<p>Alyssa Quinn Johnson, dev. “Nineteenth-Century Jewish British Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syl. clust. dev.; Sophia Hsu, syl. clust. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/jewish_british.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/jewish_british.html</a>.</p>
 				</section>
 			</main>
 			
