--- a/html/syllabi/muslim_other.html
+++ b/html/syllabi/muslim_other.html
@@ -149,7 +149,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Dana Aicha Shaaban, dev. “The Muslim “Other” in Nineteenth-Century British Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/muslim_other.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/muslim_other.html</a>.</p>
+					<p>Dana Aicha Shaaban, dev. “The Muslim “Other” in Nineteenth-Century British Literature.” Mark Knight, peer rev.; Dana Aicha Shaaban, syl. clust. dev.; Sophia Hsu, syl. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/muslim_other.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/muslim_other.html</a>.</p>
 				</section>
 			</main>
 			
