--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -135,7 +135,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Anna Feuerstein, dev. “Race, Trans-Atlantic Slavery, and the Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
+					<p>Anna Feuerstein, dev. “Race, Trans-Atlantic Slavery, and the Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
 				</section>
 			</main>
 			
