--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -133,7 +133,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Priyanka Anne Jacob, dev. “Reintroducing the Victorians.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/reintroducing_victorians.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/reintroducing_victorians.html</a>.</p>
+					<p>Priyanka Anne Jacob, dev. “Reintroducing the Victorians.” Elaine Freedgood, peer rev.; Sophia Hsu, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/reintroducing_victorians.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/reintroducing_victorians.html</a>.</p>
 				</section>
 			</main>
 			
