--- a/html/syllabi/representative_survey.html
+++ b/html/syllabi/representative_survey.html
@@ -148,7 +148,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Riya Das, dev. “British Literature II: A Representative Survey.” Jacob Romanow, peer rev.; Kimberly Cox and Riya Das, syllabus cluster devs.; Pearl Chaozon Bauer and Adrian S. Wisnicki, syllabus guides. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/representative_survey.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/representative_survey.html</a>.</p>
+					<p>Riya Das, dev. “British Literature II: A Representative Survey.” Jacob Romanow, peer rev.; Kimberly Cox and Riya Das, syl. clust. devs.; Pearl Chaozon Bauer and Adrian S. Wisnicki, syl. guides. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/representative_survey.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/representative_survey.html</a>.</p>
 				</section>
 			</main>
 			
