--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -134,7 +134,7 @@
 					
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Margaret Linley, dev. “Unsettling Victorian Literature.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/unsettling_victorian.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/unsettling_victorian.html</a>.</p>
+						<p>Margaret Linley, dev. “Unsettling Victorian Literature.” Elaine Freedgood, peer rev.; Sophia Hsu, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/unsettling_victorian.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/unsettling_victorian.html</a>.</p>
 					</section>
 			</main>
 			
