--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -124,7 +124,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Ava Bindas, dev. “The Victorian and the Human.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_human.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_human.html</a>.</p>
+					<p>Ava Bindas, dev. “The Victorian and the Human.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syl. clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_human.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_human.html</a>.</p>
 				</section>
 			</main>
 			
