--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -133,7 +133,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Jesse Cordes Selbin, dev. “Victorian Women of the World.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_women_world.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_women_world.html</a>.</p>
+					<p>Jesse Cordes Selbin, dev. “Victorian Women of the World.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syl. clust. dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_women_world.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_women_world.html</a>.</p>
 				</section>
 			</main>
 			
