--- a/py/template-lesson-plan-1.html
+++ b/py/template-lesson-plan-1.html
@@ -206,7 +206,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>{developer}, dev. “{title}.” {collab-peer-reviewers}, collab peer revs.; {lesson-plan-cluster-dev}, lesson plan cluster dev.;  {lesson-plan-guide}, lesson plan guide. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/lesson_plans/{lesson-plan-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/{lesson-plan-webpage-name}.html</a>.</p><!-- Change -->
+					<p>{developer}, dev. “{title}.” {collab-peer-reviewers}, collab peer revs.; {lesson-plan-cluster-dev}, les. plan clust. dev.;  {lesson-plan-guide}, les. plan guide;  {copyeditor}, copyed. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/lesson_plans/{lesson-plan-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/{lesson-plan-webpage-name}.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
