--- a/py/template-zoomcast-1.html
+++ b/py/template-zoomcast-1.html
@@ -105,7 +105,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with {guest}.” Hosted by {host}. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/zoomcasts/{guest-surname-lower-case}.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/{guest-surname-lower-case}.html</a>.</p><!-- Change -->
+						<p>“Zoomcast with {guest}.” {host}, host; {copyeditor}, copyed. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/zoomcasts/{guest-surname-lower-case}.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/{guest-surname-lower-case}.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
