--- a/html/zoomcasts/braham-ohri-simpson.html
+++ b/html/zoomcasts/braham-ohri-simpson.html
@@ -97,7 +97,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Kira Braham, Indu Ohri, and Bre Simpson.” Hosted by Adrian S. Wisnicki. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/braham-ohri-simpson.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/braham-ohri-simpson.html</a>.</p>
+						<p>“Zoomcast with Kira Braham, Indu Ohri, and Bre Simpson.” Adrian S. Wisnicki, host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/braham-ohri-simpson.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/braham-ohri-simpson.html</a>.</p>
 					</section>
 			</main>
 			
