--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -89,7 +89,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Haejoo Kim and Anoff Nick Cobblah.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/kim-cobblah.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/kim-cobblah.html</a>.</p>
+						<p>“Zoomcast with Haejoo Kim and Anoff Nick Cobblah.” Ryan D. Fong, host. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/kim-cobblah.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/kim-cobblah.html</a>.</p>
 					</section>
 			</main>
 			
