--- a/0_dev/removed-files/template_zoomcast.html
+++ b/0_dev/removed-files/template_zoomcast.html
@@ -93,7 +93,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with .” Hosted by . <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/.html</a>.</p><!-- Change -->
+						<p>“Zoomcast with .” , host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
