--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -87,7 +87,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Zarena Aslami.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/aslami.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/aslami.html</a>.</p>
+						<p>“Zoomcast with Zarena Aslami.” Pearl Chaozon Bauer, host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/aslami.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/aslami.html</a>.</p>
 					</section>
 			</main>
 			
