--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -105,7 +105,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-					<p>“Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/brice-hayward-reeder.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/brice-hayward-reeder.html</a>.</p>
+					<p>“Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder.” Ryan D. Fong, host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/brice-hayward-reeder.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/brice-hayward-reeder.html</a>.</p>
 				</section>
 			</main>
 			
