--- a/html/zoomcasts/chaozon-bauer.html
+++ b/html/zoomcasts/chaozon-bauer.html
@@ -87,7 +87,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Pearl Chaozon Bauer.” Hosted by Tricia Lootens. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/chaozon-bauer.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/chaozon-bauer.html</a>.</p>
+						<p>“Zoomcast with Pearl Chaozon Bauer.” Tricia Lootens, host. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/chaozon-bauer.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/chaozon-bauer.html</a>.</p>
 					</section>
 			</main>
 			
