--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -87,7 +87,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Tricia Lootens.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/lootens.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
+						<p>“Zoomcast with Tricia Lootens.” Pearl Chaozon Bauer, host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/lootens.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
 					</section>
 			</main>
 			
