--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -104,7 +104,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+						<p>“Zoomcast with Jason Rudy.” Ryan D. Fong, host. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
 					</section>
 			</main>
 			
