--- a/html/zoomcasts/servitje.html
+++ b/html/zoomcasts/servitje.html
@@ -87,7 +87,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Lorenzo Servitje.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/servitje.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/servitje.html</a>.</p>
+						<p>“Zoomcast with Lorenzo Servitje.” Ryan D. Fong, host. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/servitje.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/servitje.html</a>.</p>
 					</section>
 			</main>
 			
