--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -58,7 +58,7 @@
 
 					<p><em>Undisciplining the Victorian Classroom</em> announces a call for assessments that model inclusive, antiracist, antiableist, and anticolonial assessment practices for teaching the nineteenth century. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
-					<p class="center"><em>Submission Deadline:</em> <strong>June 30, 2023</strong></p>
+					<p class="center"><em>Extended Submission Deadline:</em> <strong>July 7, 2023</strong></p>
 
 					<div class="action-button-container">
 						<a class="action-button calls assessments-calls" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Submit your assessment</a>
@@ -78,7 +78,7 @@
 
 					<p>UVC has a simple submission process. For this call, the organizers request a copy of the assessment as well as short answers to a few questions that ask about the history of the assessment; its pedagogical rationale, aims, and visions; and its connection to the UVC mission. These materials will be reviewed by the assessment committee and select instructors will be invited to submit an essay (1,500–2,000 words) that contextualizes the assessment for others to use in different institutions all over the world. UVC will also ask contributors to participate in the peer review process by attending a workshop with the assessment committee and other accepted assessment contributors. Assessments and essays will then be published on our website as open-access resources.</p>
 
-					<p><strong>The deadline for submissions is June 30, 2023</strong>.  Please submit your assessment and responses directly through this <a aria-label="External Link" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Google form</a>. (Note: Google log in is required in order to submit a copy of your actual assessment through the form.) Contributors will be notified of final decisions in July and full essays will be due September 5.</p>
+					<p><strong>The extended deadline for submissions is July 7, 2023</strong>.  Please submit your assessment and responses directly through this <a aria-label="External Link" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Google form</a>. (Note: Google log in is required in order to submit a copy of your actual assessment through the form.) Contributors will be notified of final decisions in July and full essays will be due September 5.</p>
 
 					<p>Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of <a href="/html/assessments.html">previous assessments</a>.</p>
 
